src/pages/clippingsMgr.css
/* ... */
#shortcut-list-content {
    margin-left: -16px;
    margin-right: -16px;
    height: calc(100% - var(--toolbar-height));
}

#shortcut-list-content table {
    width: 100%;
    border-collapse: collapse;
    border-spacing: 0;
}

#shortcut-list-content table > thead {
    display: block;
    width: 418px;
    height: 20px;
    background-color: var(--color-th-bkgd);
    color: var(--color-default-text);
    border-bottom: 1px solid var(--color-th-border);
}

#shortcut-list-content table > thead > tr > th {
    padding: 3px 4px 3px 4px;
    font-weight: normal;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 90px;
}

#shortcut-list-content table > thead > tr > th:nth-child(1) {
    border-right: 1px solid var(--color-th-border);
}

#shortcut-list-content table > tbody {
    display: block;
    width: 418px;
    height: 160px;
    overflow-x: hidden;
    overflow-y: auto;
    border-bottom: 1px solid var(--color-th-border);
}

#shortcut-list-content table > tbody > tr {
    height: 20px;
}

#shortcut-list-content table > tbody > tr > td {
    padding-left: 4px;
    padding-right: 4px;
}

#shortcut-list-content table th:nth-child(1),
#shortcut-list-content table td:nth-child(1) {
    min-width: 90px;
}

#shortcut-list-content table th:nth-child(2),
#shortcut-list-content table td:nth-child(2) {
    width: 100%;
    white-space: nowrap;
}

#import-dlg {
    --width: 398px;
    --height: 206px;
    top: 40px;
}

#import-dlg #import-clippings-filepicker {
    width: 100%;
    margin-top: 2px;
    margin-bottom: 12px;
}

#import-dlg #import-clippings-file-path {
    order: 1;
    flex: 1 1 auto;

    margin-right: 2px;
}

#import-dlg #import-clippings-file-path,
#import-dlg #import-clippings-file-path:hover {
    border-bottom: 1px dotted #b1b1b1;
    border-top: 1px solid transparent;
    border-right: 1px solid transparent;
    border-left: 1px solid transparent;
    background: transparent;
}

#import-dlg #import-clippings-file-upload-btn {
    order: 2;
    flex: 0 1 auto;
    
    min-width: 72px;
    min-height: 24px;
    padding: 3px 16px 3px 16px;
    border: 1px solid var(--color-btn-border);
    border-radius: 2px;
    box-shadow: 0 0 0 0 transparent;
    background-color: var(--color-btn-bkgd);

    transition-duration: 250ms;
    transition-property: box-shadow, border;    
}

#import-dlg #import-clippings-file-upload-btn:hover {
    background-color: var(--color-btn-hover-bkgd);
}

#import-dlg #import-clippings-file-upload-btn:active {
    background-color: var(--color-btn-active-bkgd);
    border: 1px solid #858585;
}

#import-dlg #import-clippings-file-upload {
    opacity: 0;
    width: 0px;
    height: 0px;
}

#import-dlg #restore-backup-warning {
    display: none;   
}

#import-dlg #restore-backup-warning > .warning-icon {
    float: left;
    width: 22px;
    height: 22px;
    margin-top: 4px;
    background-image: url("../img/warning-64.png");
    background-repeat: no-repeat;
    background-size: contain;
}

#import-dlg #restore-backup-warning > .warning-icon[os="mac"] {
    background-image: url("../img/warning-64-mac.png");
}

#import-dlg #restore-backup-warning > p {
    min-height: 60px;
    margin: 0px 0px 0px 28px;
    padding: 8px;
    border-radius: 4px;
    background-color: #fbfb77;
    color: black;
}

#import-dlg progress {
    display: none;
    width: 355px;
    margin-top: 12px;
}

#import-dlg #import-error {
    display: none;
    margin-top: 8px;
    color: var(--color-error-text);
}

#export-dlg {
    --width: 360px;
    --height: 276px;
    top: 22px;
}

#export-dlg #export-format-list,
#insert-date-time-placeholder-dlg #date-time-format-list {
    width: 100%;
    margin-top: 4px;
    margin-bottom: 4px;
    border: 1px solid var(--color-cb-border);
}

#export-dlg #export-format-list-label {
    display: block;
}

body[data-locale="de"] #export-dlg #export-format-list-label {
    letter-spacing: -0.15px;
}

#export-dlg fieldset {
    margin-top: 6px;
    margin-bottom: 12px;
    height: 106px;
}

#export-dlg #format-description {
    margin-top: 2px;
    margin-bottom: 2px;
}

#export-dlg #include-src-urls {
    margin-left: 2px;
}

#export-dlg #include-src-urls[disabled] + label {
    color: var(--color-disabled-text);
}

#import-confirm-msgbox > .msgbox-icon,
#export-confirm-msgbox > .msgbox-icon,
#backup-confirm-msgbox > .msgbox-icon {
    margin-top: 8px;
}

#import-confirm-msgbox {
    --width: 406px;
}

#reload-sync-fldr-msgbox {
    --width: 436px;
}

#delete-sync-fldr-msgbox {
    --width: 510px;
}

#move-sync-fldr-msgbox {
    --width: 318px;
}

#move-dlg {
    --width: 342px;
    --height: 282px;
    top: 32px;
}

#move-dlg #move-to-fldr-tree {
    margin-top: 4px;
    margin-bottom: 8px;
    border: 1px solid var(--color-cb-border);
}

#move-dlg #move-to-fldr-tree > .fancytree-container {
    height: 154px;
    overflow: auto;
}

#move-dlg #move-to-fldr-tree .ae-synced-clippings-fldr > .fancytree-icon {
    background-image: var(--url-icon-synced-clippings-fldr);
}

#move-dlg #move-error {
    margin: 4px 0 4px 0;
    color: var(--color-error-text);
}

#init-error-msgbox, #sync-error-msgbox {
    --height: 142px;
    top: 64px;
}

#init-error-msgbox > .dlg-content > .msgbox-error-msg,
#sync-error-msgbox > .dlg-content > .msgbox-error-msg {
    margin-left: 44px;
    color: var(--color-error-text);
}

#mini-help-dlg {
    --width: 454px;
    --height: 352px;
    top: 8px;
}

body[data-os="mac"] #mini-help-dlg {
    height: 340px;
    top: 18px;
}

body[data-locale="de"] #mini-help-dlg {
    height: 368px;
    top: 2px;
}

#shortcut-list-dlg .hlp-hdr,
#mini-help-dlg .hlp-hdr {
    margin-top: 0;
    font-size: 13px;
    font-weight: bold;
}

#show-only-synced-items-reminder {
    --height: 150px;
}

#show-only-synced-items-reminder > .dlg-content > .msgbox-info-icon {
    margin-bottom: 72px;
}

#generic-msg-box {
    --width: 30em;
}

